Changed the likelihood function

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e16f0dcf-5484-4e8f-a010-e88a003b8daa",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,242 @@
       "Iteration 80000: Accept Rate = 0.294, Theta = [0.         1.50073219 1.9463095 ]\n",
       "Iteration 90000: Accept Rate = 0.263, Theta = [0.         2.02454213 1.67067232]\n",
       "Iteration 100000: Accept Rate = 0.238, Theta = [0.         1.89149962 1.68751291]\n",
-      "Iteration 110000: Accept Rate = 0.217, Theta = [0.         1.7459782  1.56885983]\n"
+      "Iteration 110000: Accept Rate = 0.217, Theta = [0.         1.7459782  1.56885983]\n",
+      "Iteration 120000: Accept Rate = 0.200, Theta = [0.         1.88190511 1.6766849 ]\n",
+      "Iteration 130000: Accept Rate = 0.185, Theta = [0.         2.15755615 1.72622832]\n",
+      "Iteration 140000: Accept Rate = 0.173, Theta = [0.         1.95256307 1.91278293]\n",
+      "Iteration 150000: Accept Rate = 0.162, Theta = [0.         1.83777101 1.71488771]\n",
+      "Iteration 160000: Accept Rate = 0.153, Theta = [0.         1.68127032 1.92257169]\n",
+      "Iteration 170000: Accept Rate = 0.145, Theta = [0.         1.91818385 2.04598716]\n",
+      "Iteration 180000: Accept Rate = 0.137, Theta = [0.         1.95125945 1.76674371]\n",
+      "Iteration 190000: Accept Rate = 0.131, Theta = [0.         1.58054215 1.40022306]\n",
+      "Iteration 200000: Accept Rate = 0.125, Theta = [0.90361616 0.         0.89495535]\n",
+      "Iteration 210000: Accept Rate = 0.120, Theta = [0.         2.17982387 1.74014042]\n",
+      "Iteration 220000: Accept Rate = 0.115, Theta = [0.         1.86099896 1.82706035]\n",
+      "Iteration 230000: Accept Rate = 0.110, Theta = [0.         1.93055186 1.68310572]\n",
+      "Iteration 240000: Accept Rate = 0.106, Theta = [1.01350908 0.         0.85373276]\n",
+      "Iteration 250000: Accept Rate = 0.102, Theta = [0.96120884 0.         0.74330673]\n",
+      "Iteration 260000: Accept Rate = 0.099, Theta = [0.         1.96479888 1.77797707]\n",
+      "Iteration 270000: Accept Rate = 0.096, Theta = [0.         1.99202794 1.60391475]\n",
+      "Iteration 280000: Accept Rate = 0.093, Theta = [0.         2.08417581 1.72730315]\n",
+      "Iteration 290000: Accept Rate = 0.090, Theta = [0.         1.73822867 1.64629516]\n",
+      "Iteration 300000: Accept Rate = 0.087, Theta = [0.91147362 0.         1.00982998]\n",
+      "Iteration 310000: Accept Rate = 0.085, Theta = [0.90675288 0.         0.93732029]\n",
+      "Iteration 320000: Accept Rate = 0.083, Theta = [0.         1.98412971 1.90357218]\n",
+      "Iteration 330000: Accept Rate = 0.080, Theta = [0.         1.96351211 1.79855304]\n",
+      "Iteration 340000: Accept Rate = 0.078, Theta = [0.98213261 0.         0.97184802]\n",
+      "Iteration 350000: Accept Rate = 0.077, Theta = [0.         1.95780093 1.91343889]\n",
+      "Iteration 360000: Accept Rate = 0.075, Theta = [0.         2.10977437 1.81254102]\n",
+      "Iteration 370000: Accept Rate = 0.073, Theta = [0.82983178 0.         0.99837048]\n",
+      "Iteration 380000: Accept Rate = 0.071, Theta = [0.         1.54712901 1.68783023]\n",
+      "Iteration 390000: Accept Rate = 0.070, Theta = [0.         1.58063062 1.59227446]\n",
+      "Iteration 400000: Accept Rate = 0.068, Theta = [0.         1.65111263 1.62209224]\n",
+      "Iteration 410000: Accept Rate = 0.067, Theta = [0.         1.83739482 1.78545525]\n",
+      "Iteration 420000: Accept Rate = 0.066, Theta = [0.         1.63663129 1.6247123 ]\n",
+      "Iteration 430000: Accept Rate = 0.065, Theta = [0.         1.57532181 1.87578898]\n",
+      "Iteration 440000: Accept Rate = 0.063, Theta = [0.         1.69468076 1.61991427]\n",
+      "Iteration 450000: Accept Rate = 0.062, Theta = [0.         1.85022517 1.75918975]\n",
+      "Iteration 460000: Accept Rate = 0.061, Theta = [0.         1.98371855 1.75364548]\n",
+      "Iteration 470000: Accept Rate = 0.060, Theta = [0.         1.45670031 1.97641777]\n",
+      "Iteration 480000: Accept Rate = 0.059, Theta = [0.         1.88278243 1.56068829]\n",
+      "Iteration 490000: Accept Rate = 0.058, Theta = [0.         1.81856703 1.53153096]\n",
+      "Iteration 500000: Accept Rate = 0.057, Theta = [0.         1.7354203  1.96923559]\n",
+      "Estimated Theta: [0.1455148  1.55702044 1.58187931]\n",
+      "Estimated Error: [0.8544852  1.55702044 1.58187931]\n",
+      "Plot saved to ../results/example1/CRN1/AdaptiveMCMC_plot_Index_6_TotalCount_275_kde.png\n",
+      "Posterior probabilities of network structures (above cutoff):\n",
+      "\n",
+      "011 (R2 + R3) : 0.8396\n",
+      "101 (R1 + R3) : 0.1564\n",
+      "\n",
+      "Bayes Factors between model pairs:\n",
+      "\n",
+      "BF(101 / 011) = 0.19\n",
+      "BF(011 / 101) = 5.37\n",
+      "Plot saved to ../results/example1/CRN1/AdaptiveMCMC_plot_Index_6_TotalCount_275_posterior.png\n",
+      "Run 6 | Adaptive Spike & Slab: L2 error of mean from true theta = 2.37840\n",
+      "Saving summary to: ../results/example1/CRN1/mcmc_summary.xlsx\n",
+      "Summary saved successfully.\n",
+      "MCMC completed for index 6.\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 7, Stoichiometric Change: (2, -1)\n",
+      "Extracting local data for stoichiometric change [2, -1] at index 7\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 7: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 8, Stoichiometric Change: (0, -2)\n",
+      "Extracting local data for stoichiometric change [0, -2] at index 8\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 8: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 9, Stoichiometric Change: (1, -2)\n",
+      "Extracting local data for stoichiometric change [1, -2] at index 9\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 9: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 10, Stoichiometric Change: (2, -2)\n",
+      "Extracting local data for stoichiometric change [2, -2] at index 10\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 10: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 11, Stoichiometric Change: (-1, 0)\n",
+      "Extracting local data for stoichiometric change [-1, 0] at index 11\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 11: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 12, Stoichiometric Change: (-1, 1)\n",
+      "Extracting local data for stoichiometric change [-1, 1] at index 12\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [1. 0. 0.] (Norm: 1.0000)\n",
+      "True Likelihood = -123.77073198210596\n",
+      "Total Count = 275\n",
+      "Running Adaptive MCMC with spike-and-slab prior...\n",
+      "Reaction Names = ['X1_to_X2:', 'X1+X2_to_2X2:', '2X1_to_X1+X2:']\n",
+      "Iteration 10000: Accept Rate = 0.425, Theta = [0.85826519 1.22498061 0.        ]\n",
+      "Iteration 20000: Accept Rate = 0.426, Theta = [1.00523716 1.21177447 0.        ]\n",
+      "Iteration 30000: Accept Rate = 0.427, Theta = [0.88155241 1.10545009 0.        ]\n",
+      "Iteration 40000: Accept Rate = 0.431, Theta = [0.80710713 1.45010668 0.        ]\n",
+      "Iteration 50000: Accept Rate = 0.434, Theta = [1.04917237 1.00811399 0.        ]\n",
+      "Iteration 60000: Accept Rate = 0.414, Theta = [0.89803134 1.49928639 0.        ]\n",
+      "Iteration 70000: Accept Rate = 0.398, Theta = [0.91124841 0.9556545  0.        ]\n",
+      "Iteration 80000: Accept Rate = 0.386, Theta = [0.87140663 1.5387629  0.        ]\n",
+      "Iteration 90000: Accept Rate = 0.375, Theta = [1.02603683 1.33971701 0.        ]\n",
+      "Iteration 100000: Accept Rate = 0.362, Theta = [0.8630645  1.06225118 0.        ]\n",
+      "Iteration 110000: Accept Rate = 0.354, Theta = [0.96621881 1.00853441 0.        ]\n",
+      "Iteration 120000: Accept Rate = 0.347, Theta = [0.99624533 1.02531573 0.        ]\n",
+      "Iteration 130000: Accept Rate = 0.342, Theta = [0.83419012 1.03962982 0.        ]\n",
+      "Iteration 140000: Accept Rate = 0.337, Theta = [0.85072316 1.54339906 0.        ]\n",
+      "Iteration 150000: Accept Rate = 0.333, Theta = [0.92037347 0.92392093 0.        ]\n",
+      "Iteration 160000: Accept Rate = 0.329, Theta = [0.98295714 1.11838892 0.        ]\n",
+      "Iteration 170000: Accept Rate = 0.325, Theta = [0.91203063 1.39133282 0.        ]\n",
+      "Iteration 180000: Accept Rate = 0.322, Theta = [1.00334844 0.86531327 0.        ]\n",
+      "Iteration 190000: Accept Rate = 0.320, Theta = [1.02777391 0.94036574 0.        ]\n",
+      "Iteration 200000: Accept Rate = 0.318, Theta = [0.9581351  1.16959042 0.        ]\n",
+      "Iteration 210000: Accept Rate = 0.315, Theta = [1.0328942 1.0148117 0.       ]\n",
+      "Iteration 220000: Accept Rate = 0.313, Theta = [0.8595979  1.11083368 0.        ]\n",
+      "Iteration 230000: Accept Rate = 0.311, Theta = [0.85534593 1.14642037 0.        ]\n",
+      "Iteration 240000: Accept Rate = 0.310, Theta = [0.91909847 1.32286349 0.        ]\n",
+      "Iteration 250000: Accept Rate = 0.308, Theta = [0.95142922 1.18969419 0.        ]\n",
+      "Iteration 260000: Accept Rate = 0.306, Theta = [0.91669517 1.23753276 0.        ]\n",
+      "Iteration 270000: Accept Rate = 0.305, Theta = [0.92016352 0.92216975 0.        ]\n",
+      "Iteration 280000: Accept Rate = 0.304, Theta = [0.89241228 1.2230284  0.        ]\n",
+      "Iteration 290000: Accept Rate = 0.302, Theta = [0.94346086 1.06394682 0.        ]\n",
+      "Iteration 300000: Accept Rate = 0.302, Theta = [0.90381671 1.09936293 0.        ]\n",
+      "Iteration 310000: Accept Rate = 0.300, Theta = [1.07897745 1.16530399 0.        ]\n",
+      "Iteration 320000: Accept Rate = 0.299, Theta = [0.94710422 1.06946679 0.        ]\n",
+      "Iteration 330000: Accept Rate = 0.298, Theta = [0.88239552 1.09826177 0.        ]\n",
+      "Iteration 340000: Accept Rate = 0.297, Theta = [0.8158607 1.3034466 0.       ]\n",
+      "Iteration 350000: Accept Rate = 0.297, Theta = [0.98624927 0.77694031 0.        ]\n",
+      "Iteration 360000: Accept Rate = 0.290, Theta = [0.         1.73751215 1.89110802]\n",
+      "Iteration 370000: Accept Rate = 0.283, Theta = [0.         2.11487267 1.90139496]\n",
+      "Iteration 380000: Accept Rate = 0.277, Theta = [0.         2.01798297 1.79368675]\n",
+      "Iteration 390000: Accept Rate = 0.270, Theta = [0.         2.12771958 1.97155938]\n",
+      "Iteration 400000: Accept Rate = 0.263, Theta = [0.         1.84378776 1.4930467 ]\n",
+      "Iteration 410000: Accept Rate = 0.257, Theta = [0.         2.03586268 1.94066353]\n",
+      "Iteration 420000: Accept Rate = 0.251, Theta = [0.         2.10015057 1.75694007]\n",
+      "Iteration 430000: Accept Rate = 0.246, Theta = [0.         1.97051018 2.09453606]\n",
+      "Iteration 440000: Accept Rate = 0.240, Theta = [0.         1.83465694 1.68813173]\n",
+      "Iteration 450000: Accept Rate = 0.235, Theta = [0.         2.17029358 1.7957547 ]\n",
+      "Iteration 460000: Accept Rate = 0.230, Theta = [0.         1.58600812 1.5539011 ]\n",
+      "Iteration 470000: Accept Rate = 0.226, Theta = [0.84674191 1.19622439 0.        ]\n",
+      "Iteration 480000: Accept Rate = 0.221, Theta = [0.         2.20639877 1.90393973]\n",
+      "Iteration 490000: Accept Rate = 0.217, Theta = [0.         2.3741045  1.75965915]\n",
+      "Iteration 500000: Accept Rate = 0.213, Theta = [0.         2.31700042 1.90472989]\n",
+      "Estimated Theta: [0.66287672 1.3928699  0.50781404]\n",
+      "Estimated Error: [0.33712328 1.3928699  0.50781404]\n",
+      "Plot saved to ../results/example1/CRN1/AdaptiveMCMC_plot_Index_12_TotalCount_275_kde.png\n",
+      "Posterior probabilities of network structures (above cutoff):\n",
+      "\n",
+      "110 (R1 + R2) : 0.7187\n",
+      "011 (R2 + R3) : 0.2722\n",
+      "\n",
+      "Bayes Factors between model pairs:\n",
+      "\n",
+      "BF(110 / 011) = 2.64\n",
+      "BF(011 / 110) = 0.38\n",
+      "Plot saved to ../results/example1/CRN1/AdaptiveMCMC_plot_Index_12_TotalCount_275_posterior.png\n",
+      "Run 12 | Adaptive Spike & Slab: L2 error of mean from true theta = 1.52040\n",
+      "Saving summary to: ../results/example1/CRN1/mcmc_summary.xlsx\n",
+      "Summary saved successfully.\n",
+      "MCMC completed for index 12.\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 13, Stoichiometric Change: (-1, 2)\n",
+      "Extracting local data for stoichiometric change [-1, 2] at index 13\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 13: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 14, Stoichiometric Change: (-1, -1)\n",
+      "Extracting local data for stoichiometric change [-1, -1] at index 14\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 14: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 15, Stoichiometric Change: (-2, 0)\n",
+      "Extracting local data for stoichiometric change [-2, 0] at index 15\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 15: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 16, Stoichiometric Change: (-2, 1)\n",
+      "Extracting local data for stoichiometric change [-2, 1] at index 16\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 16: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 17, Stoichiometric Change: (-2, 2)\n",
+      "Extracting local data for stoichiometric change [-2, 2] at index 17\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 17: norm too small (0.0000).\n",
+      "**********\n"
      ]
     }
    ],
