--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "92c37563-8fb4-4e20-8c07-7468c72453b2",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,284 @@
       "Iteration 150000: Accept Rate = 0.274, Theta = [1.99393    0.         1.25557992]\n",
       "Iteration 160000: Accept Rate = 0.266, Theta = [0.89830062 0.         1.41803421]\n",
       "Iteration 170000: Accept Rate = 0.258, Theta = [0.94949238 0.         1.37553417]\n",
-      "Iteration 180000: Accept Rate = 0.251, Theta = [1.42351724 0.         1.34177314]\n"
+      "Iteration 180000: Accept Rate = 0.251, Theta = [1.42351724 0.         1.34177314]\n",
+      "Iteration 190000: Accept Rate = 0.245, Theta = [1.72664027 0.         1.28300113]\n",
+      "Iteration 200000: Accept Rate = 0.239, Theta = [1.43947866 0.         1.1496366 ]\n",
+      "Iteration 210000: Accept Rate = 0.234, Theta = [0.4528954 0.        1.4114024]\n",
+      "Iteration 220000: Accept Rate = 0.230, Theta = [2.2335341  0.         1.23679856]\n",
+      "Iteration 230000: Accept Rate = 0.225, Theta = [2.54343725 0.         1.22914451]\n",
+      "Iteration 240000: Accept Rate = 0.221, Theta = [0.         0.65442573 1.28450328]\n",
+      "Iteration 250000: Accept Rate = 0.217, Theta = [6.17804234 0.         1.35370841]\n",
+      "Iteration 260000: Accept Rate = 0.214, Theta = [4.39411103 0.         1.29197428]\n",
+      "Iteration 270000: Accept Rate = 0.211, Theta = [1.22347641 0.         1.56168442]\n",
+      "Iteration 280000: Accept Rate = 0.209, Theta = [2.15611854 0.         1.20867791]\n",
+      "Iteration 290000: Accept Rate = 0.207, Theta = [0.         0.34354462 1.20453808]\n",
+      "Iteration 300000: Accept Rate = 0.205, Theta = [4.07843379 0.         1.40539116]\n",
+      "Iteration 310000: Accept Rate = 0.203, Theta = [0.81638    0.         1.32568936]\n",
+      "Iteration 320000: Accept Rate = 0.200, Theta = [1.43000634 0.         1.34527971]\n",
+      "Iteration 330000: Accept Rate = 0.199, Theta = [0.         0.49135796 1.35896156]\n",
+      "Iteration 340000: Accept Rate = 0.197, Theta = [2.33359211 0.         1.50079199]\n",
+      "Iteration 350000: Accept Rate = 0.194, Theta = [2.16185506 0.         1.34674002]\n",
+      "Iteration 360000: Accept Rate = 0.192, Theta = [1.43030622 0.         1.35651419]\n",
+      "Iteration 370000: Accept Rate = 0.190, Theta = [4.80574836 0.         1.34485037]\n",
+      "Iteration 380000: Accept Rate = 0.189, Theta = [1.4511318  0.         1.42643774]\n",
+      "Iteration 390000: Accept Rate = 0.187, Theta = [0.49615794 0.         1.26869924]\n",
+      "Iteration 400000: Accept Rate = 0.185, Theta = [0.83440257 0.         1.31790174]\n",
+      "Iteration 410000: Accept Rate = 0.184, Theta = [1.54730638 0.         1.36464284]\n",
+      "Iteration 420000: Accept Rate = 0.182, Theta = [2.5844828  0.         1.40424159]\n",
+      "Iteration 430000: Accept Rate = 0.181, Theta = [1.00259473 0.         1.29641852]\n",
+      "Iteration 440000: Accept Rate = 0.180, Theta = [2.30182974 0.         1.41324616]\n",
+      "Iteration 450000: Accept Rate = 0.179, Theta = [0.         0.65476133 1.34703349]\n",
+      "Iteration 460000: Accept Rate = 0.178, Theta = [2.88395616 0.         1.47227934]\n",
+      "Iteration 470000: Accept Rate = 0.177, Theta = [5.37138145 0.         1.29657696]\n",
+      "Iteration 480000: Accept Rate = 0.176, Theta = [3.25709812 0.         1.36805915]\n",
+      "Iteration 490000: Accept Rate = 0.174, Theta = [2.11586258 0.         1.39907209]\n",
+      "Iteration 500000: Accept Rate = 0.174, Theta = [1.75450749 0.         1.6274015 ]\n",
+      "Estimated Theta: [1.98414742 0.02728045 1.35636303]\n",
+      "Estimated Error: [0.98414742 0.02728045 0.35636303]\n",
+      "Plot saved to ../results/example2/AdaptiveMCMC_plot_Index_2_TotalCount_277_kde.png\n",
+      "Posterior probabilities of network structures (above cutoff):\n",
+      "\n",
+      "101 (R1 + R3) : 0.9411\n",
+      "011 (R2 + R3) : 0.0578\n",
+      "\n",
+      "Bayes Factors between model pairs:\n",
+      "\n",
+      "BF(101 / 011) = 16.29\n",
+      "BF(011 / 101) = 0.06\n",
+      "Plot saved to ../results/example2/AdaptiveMCMC_plot_Index_2_TotalCount_277_posterior.png\n",
+      "Run 2 | Adaptive Spike & Slab: L2 error of mean from true theta = 1.04704\n",
+      "Saving summary to: ../results/example2/mcmc_summary.xlsx\n",
+      "Summary saved successfully.\n",
+      "MCMC completed for index 2.\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 3, Stoichiometric Change: (1, 1)\n",
+      "Extracting local data for stoichiometric change [1, 1] at index 3\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 3: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 4, Stoichiometric Change: (2, 0)\n",
+      "Extracting local data for stoichiometric change [2, 0] at index 4\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 4: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 5, Stoichiometric Change: (0, -1)\n",
+      "Extracting local data for stoichiometric change [0, -1] at index 5\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 5: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 6, Stoichiometric Change: (1, -1)\n",
+      "Extracting local data for stoichiometric change [1, -1] at index 6\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 6: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 7, Stoichiometric Change: (2, -1)\n",
+      "Extracting local data for stoichiometric change [2, -1] at index 7\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 7: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 8, Stoichiometric Change: (0, -2)\n",
+      "Extracting local data for stoichiometric change [0, -2] at index 8\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 8: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 9, Stoichiometric Change: (1, -2)\n",
+      "Extracting local data for stoichiometric change [1, -2] at index 9\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 9: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 10, Stoichiometric Change: (2, -2)\n",
+      "Extracting local data for stoichiometric change [2, -2] at index 10\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 10: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 11, Stoichiometric Change: (-1, 0)\n",
+      "Extracting local data for stoichiometric change [-1, 0] at index 11\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.  0.1 0. ] (Norm: 0.1000)\n",
+      "True Likelihood = 452.3230956215936\n",
+      "Total Count = 146\n",
+      "Running Adaptive MCMC with spike-and-slab prior...\n",
+      "Reaction Names = ['X1_to_Empty:', 'X1+X2_to_X2:', '2X1_to_X1:']\n",
+      "Iteration 10000: Accept Rate = 0.200, Theta = [0.         0.26189995 0.        ]\n",
+      "Iteration 20000: Accept Rate = 0.203, Theta = [0.         0.27336589 0.        ]\n",
+      "Iteration 30000: Accept Rate = 0.334, Theta = [1.72486354 0.         0.        ]\n",
+      "Iteration 40000: Accept Rate = 0.414, Theta = [1.32292049 0.         0.        ]\n",
+      "Iteration 50000: Accept Rate = 0.460, Theta = [1.31473629 0.         0.        ]\n",
+      "Iteration 60000: Accept Rate = 0.388, Theta = [1.4180872 0.        0.       ]\n",
+      "Iteration 70000: Accept Rate = 0.336, Theta = [1.37728406 0.         0.        ]\n",
+      "Iteration 80000: Accept Rate = 0.297, Theta = [1.5254489 0.        0.       ]\n",
+      "Iteration 90000: Accept Rate = 0.267, Theta = [1.4322217 0.        0.       ]\n",
+      "Iteration 100000: Accept Rate = 0.243, Theta = [1.36103936 0.         0.        ]\n",
+      "Iteration 110000: Accept Rate = 0.224, Theta = [1.57193516 0.         0.        ]\n",
+      "Iteration 120000: Accept Rate = 0.207, Theta = [1.32151879 0.         0.        ]\n",
+      "Iteration 130000: Accept Rate = 0.194, Theta = [1.27690657 0.         0.        ]\n",
+      "Iteration 140000: Accept Rate = 0.182, Theta = [1.36907557 0.         0.        ]\n",
+      "Iteration 150000: Accept Rate = 0.171, Theta = [0.         0.21727332 0.        ]\n",
+      "Iteration 160000: Accept Rate = 0.162, Theta = [1.30340434 0.         0.        ]\n",
+      "Iteration 170000: Accept Rate = 0.153, Theta = [1.46088355 0.         0.        ]\n",
+      "Iteration 180000: Accept Rate = 0.146, Theta = [1.31347479 0.         0.        ]\n",
+      "Iteration 190000: Accept Rate = 0.139, Theta = [1.312722 0.       0.      ]\n",
+      "Iteration 200000: Accept Rate = 0.133, Theta = [1.31140041 0.         0.        ]\n",
+      "Iteration 210000: Accept Rate = 0.128, Theta = [1.43419515 0.         0.        ]\n",
+      "Iteration 220000: Accept Rate = 0.123, Theta = [1.48347368 0.         0.        ]\n",
+      "Iteration 230000: Accept Rate = 0.119, Theta = [1.61870551 0.         0.        ]\n",
+      "Iteration 240000: Accept Rate = 0.115, Theta = [1.48155 0.      0.     ]\n",
+      "Iteration 250000: Accept Rate = 0.111, Theta = [1.28986515 0.         0.        ]\n",
+      "Iteration 260000: Accept Rate = 0.107, Theta = [1.29412695 0.         0.        ]\n",
+      "Iteration 270000: Accept Rate = 0.104, Theta = [1.26357691 0.         0.        ]\n",
+      "Iteration 280000: Accept Rate = 0.101, Theta = [1.37535273 0.         0.        ]\n",
+      "Iteration 290000: Accept Rate = 0.099, Theta = [1.29891096 0.         0.        ]\n",
+      "Iteration 300000: Accept Rate = 0.096, Theta = [1.20440949 0.         0.        ]\n",
+      "Iteration 310000: Accept Rate = 0.094, Theta = [1.55456291 0.         0.        ]\n",
+      "Iteration 320000: Accept Rate = 0.092, Theta = [1.52872752 0.         0.        ]\n",
+      "Iteration 330000: Accept Rate = 0.090, Theta = [1.44583312 0.         0.        ]\n",
+      "Iteration 340000: Accept Rate = 0.088, Theta = [1.5282806 0.        0.       ]\n",
+      "Iteration 350000: Accept Rate = 0.086, Theta = [0.        0.2926916 0.       ]\n",
+      "Iteration 360000: Accept Rate = 0.084, Theta = [1.37269224 0.         0.        ]\n",
+      "Iteration 370000: Accept Rate = 0.083, Theta = [1.31252829 0.         0.        ]\n",
+      "Iteration 380000: Accept Rate = 0.081, Theta = [1.31351845 0.         0.        ]\n",
+      "Iteration 390000: Accept Rate = 0.080, Theta = [1.44304628 0.         0.        ]\n",
+      "Iteration 400000: Accept Rate = 0.078, Theta = [1.26841811 0.         0.        ]\n",
+      "Iteration 410000: Accept Rate = 0.077, Theta = [1.28433854 0.         0.        ]\n",
+      "Iteration 420000: Accept Rate = 0.076, Theta = [1.38454088 0.         0.        ]\n",
+      "Iteration 430000: Accept Rate = 0.075, Theta = [0.         0.24116426 0.        ]\n",
+      "Iteration 440000: Accept Rate = 0.074, Theta = [1.46925759 0.         0.        ]\n",
+      "Iteration 450000: Accept Rate = 0.073, Theta = [1.11823198 0.         0.        ]\n",
+      "Iteration 460000: Accept Rate = 0.072, Theta = [1.29833696 0.         0.        ]\n",
+      "Iteration 470000: Accept Rate = 0.071, Theta = [1.5685271 0.        0.       ]\n",
+      "Iteration 480000: Accept Rate = 0.070, Theta = [1.52132648 0.         0.        ]\n",
+      "Iteration 490000: Accept Rate = 0.069, Theta = [1.45917164 0.         0.        ]\n",
+      "Iteration 500000: Accept Rate = 0.068, Theta = [1.46449434 0.         0.        ]\n",
+      "Estimated Theta: [1.32224871 0.01174165 0.        ]\n",
+      "Estimated Error: [1.32224871 0.08825835 0.        ]\n",
+      "Plot saved to ../results/example2/AdaptiveMCMC_plot_Index_11_TotalCount_146_kde.png\n",
+      "Posterior probabilities of network structures (above cutoff):\n",
+      "\n",
+      "100 (R1) : 0.9569\n",
+      "\n",
+      "Bayes Factors between model pairs:\n",
+      "\n",
+      "Plot saved to ../results/example2/AdaptiveMCMC_plot_Index_11_TotalCount_146_posterior.png\n",
+      "Run 11 | Adaptive Spike & Slab: L2 error of mean from true theta = 1.32519\n",
+      "Saving summary to: ../results/example2/mcmc_summary.xlsx\n",
+      "Summary saved successfully.\n",
+      "MCMC completed for index 11.\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 12, Stoichiometric Change: (-1, 1)\n",
+      "Extracting local data for stoichiometric change [-1, 1] at index 12\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 12: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 13, Stoichiometric Change: (-1, 2)\n",
+      "Extracting local data for stoichiometric change [-1, 2] at index 13\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 13: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 14, Stoichiometric Change: (-1, -1)\n",
+      "Extracting local data for stoichiometric change [-1, -1] at index 14\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 14: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 15, Stoichiometric Change: (-2, 0)\n",
+      "Extracting local data for stoichiometric change [-2, 0] at index 15\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 15: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 16, Stoichiometric Change: (-2, 1)\n",
+      "Extracting local data for stoichiometric change [-2, 1] at index 16\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 16: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 17, Stoichiometric Change: (-2, 2)\n",
+      "Extracting local data for stoichiometric change [-2, 2] at index 17\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 17: norm too small (0.0000).\n",
+      "**********\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/suzannesindi/Documents/GitHub/BayesCRNInference/src/mcmc.py:26: RuntimeWarning: invalid value encountered in divide\n",
+      "  acf = acf[n-1:] / acf[n-1]\n",
+      "/Users/suzannesindi/Documents/GitHub/BayesCRNInference/src/mcmc.py:35: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  z = (np.mean(a) - np.mean(b)) / np.sqrt(np.var(a)/len(a) + np.var(b)/len(b))\n",
+      "/Users/suzannesindi/miniforge3/lib/python3.12/site-packages/statsmodels/tsa/stattools.py:702: RuntimeWarning: invalid value encountered in divide\n",
+      "  acf = avf[: nlags + 1] / avf[0]\n"
      ]
     }
    ],
